changed the logos for branding

--- a/extensions/github-authentication/media/index.html
+++ b/extensions/github-authentication/media/index.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<div class="content">
 			<div class="icon-container">
-				<img src="code-icon.svg" class="vscode-icon">
+				<img src="logo.png" class="vscode-icon">
 			</div>
 			<h1 class="title">Launching <span class="app-name"></span></h1>
 			<div class="message">
